# Aut_A_DSA_Project

./: 01_06_feladatok.ipynb  02_01_Pandas_bevezeto.ipynb  03-04_01_Adattisztitas_es_intergracio.ipynb  05-06_01_apriori.ipynb  07-08_01_osztalyozas.ipynb  09-10_01_lin_regresszio.ipynb  CMakeLists.txt  README.md  marketplaces.docx
MarketPlaces/: CMakeLists.txt  Enums.h  Functions.c  Functions.h  Structs.h  main.c
Project3/: CMakeLists.txt  main.c
Project3/Array/: Array.c  Array.h
Project3/BinarySearchTree/: BinarySearchTree.c  BinarySearchTree.h
Project3/Book/: Book.c  Book.h
Project3/DynamicList/: DynamicList.c  DynamicList.h
Project3/HashTable/: HashTable.c  HashTable.h
Project3/Heap/: Heap.c  Heap.h
project2/: CMakeLists.txt  enums.c  enums.h  functions.c  functions.h  main.c
